--- a/src/app/message/message.page.html
+++ b/src/app/message/message.page.html
@@ -1,17 +1,38 @@
 <ion-content>
+<!--  <ion-item-group>-->
+<!--    <ion-item-divider>-->
+<!--      <ion-label>Inbox</ion-label>-->
+<!--    </ion-item-divider>-->
+<!--    <router-outlet name="inboxOutlet"></router-outlet>-->
+<!--    <ion-item-divider>-->
+<!--      <ion-label>Outbox</ion-label>-->
+<!--    </ion-item-divider>-->
+<!--    <router-outlet name="outboxOutlet"></router-outlet>-->
+<!--  </ion-item-group>-->
+<!--  <ion-buttons>-->
+<!--    <ion-button routerLink="new">{{'messages.new'|translate}}</ion-button>-->
+<!--  </ion-buttons>-->
+    <ion-grid class="no-horizontal-padding">
+        <ion-row class="ion-justify-content-center ion-no-padding">
+            <ion-col class="ion-no-padding" [sizeXs]="12" [sizeSm]="6" [sizeMd]="6" [sizeLg]="4" [sizeXl]="4">
+                <ion-header>
+                    <ion-toolbar>
+                        <ion-title>Messages</ion-title>
+                    </ion-toolbar>
+                </ion-header>
+                <ion-list>
+                    <ion-item button onclick="alert('aaa')">
+                        <ion-icon slot="start" name="message1" style="color: black;"></ion-icon>
+                        <ion-label>
+                            <h3>title message1</h3>
+                        </ion-label>
+                    </ion-item>
 
-  <ion-item-group>
-    <ion-item-divider>
-      <ion-label>Inbox</ion-label>
-    </ion-item-divider>
-    <router-outlet name="inboxOutlet"></router-outlet>
-    <ion-item-divider>
-      <ion-label>Outbox</ion-label>
-    </ion-item-divider>
-    <router-outlet name="outboxOutlet"></router-outlet>
-  </ion-item-group>
-  <ion-buttons>
-    <ion-button routerLink="new">{{'messages.new'|translate}}</ion-button>
-  </ion-buttons>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
 </ion-content>
+
 
